更新评论系统配置，添加中文LaTeX配置指南及思考总结

--- a/source/_posts/感悟.md
+++ b/source/_posts/感悟.md
@@ -5,3 +5,7 @@ tags: thoughts
 ---
 1. 很多事情就是利益相关，断人财路如杀人父母，你是评不出对错的。
 2. 用得到的才去学，用不到的一般不用学。我们在大多数领域是小白。
+3. 能用能跑就不要折腾,特别是你的专业方向不是这个东西,与它的相关度小于0.75
+4. 不要想太多,可能性小的不考虑,不是自己学习工作方向的不考虑,不是自己能做的就不考虑,不要老折腾,只有自己的学习工作做完后才能折腾.如果折腾东西就折腾热门主干,不要乱折腾冷门小众细枝末节的东西.
+5. 选择要综合选择考虑你的成功率与喜好率,一般效益(成功率*收益)最大的放第一,喜好度最大放第二,这样你才能做出最明智的选择
+6. 不要拿你的业余爱好挑战别人的专业工作(比别人好,学习效率高的可能性非常之低).
